Fix responsive button group in modelHoses, fix horizonrtal scrollbar from interios sections

--- a/src/components/houseModel/houseModel.module.css
+++ b/src/components/houseModel/houseModel.module.css
@@ -1,3 +1,7 @@
+.sectionContainer {
+  margin-bottom: 50px;
+}
+
 .sectionTitle {
   margin-bottom: 50px;
 }
@@ -34,6 +38,13 @@ font-weight: 400;
   background-color: var(--main-color);
 }
 
+.buttonsContainer {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
 /* .sectionTitle span::before {
 content: "";
 position: absolute;
@@ -55,7 +66,7 @@ transition: .3s;
 }
 
 .imgContainer {
-  height: auto;
+  padding: 0 10px;
 }
 
 .imgResponsive {
@@ -72,17 +83,24 @@ transition: .3s;
     font-size: 17px;
   }
 
+  .buttonsContainer {
+    gap: 0;
+    justify-content: space-between;
+  }
+
   .sectionTitle h2 {
-    font-size: 35px;
+    font-size: 15px;
+    padding: 5px 15px;
   }
 
   .imgGroup {
     flex-direction: column;
-    height: 480px;
+    /* height: 480px; */
     gap: 20px;
   }
 
   .imgContainer {
-    height: 300px;
+    /* height: 300px; */
+    /* width: 320px; */
   }
 }
